<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Out of the Box</string>
    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_start_fight">Start Fight</string>
    <string name="action_ko">End fight with K.O</string>
    <string name="action_tko">End fight with  K.O.T</string>
    <string name="action_penalty">Give Penalty</string>
    <string name="action_disqualify">Disqualify</string>
    <string name="action_back_to_main">Back to Main Menu</string>
    <!-- Titles -->
    <string name="title_activity_main">Main Screen</string>
    <string name="title_activity_fighter_definition">Fighters Definition</string>
    <string name="title_activity_judge_definition">Judges Definition</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_round_definition">Round Definition</string>
    <string name="title_alert_validation">Validation Alert</string>
    <string name="title_alert_ko">KO a fighter</string>
    <string name="title_alert_tko">TKO a fighter</string>
    <string name="title_alert_disqualify">Disqualify a fighter</string>
    <string name="title_alert_penalty">Give penalty</string>
    <string name="title_alert_back_to_main">Back to Main Menu</string>
    <string name="title_round_advantage">Advantage to</string>
    <!-- Labels -->
    <string name="red_fighter_label">Red Fighter</string>
    <string name="red_fighter_short_label">Red</string>
    <string name="blue_fighter_label">Blue Fighter</string>
    <string name="blue_fighter_short_label">Blue</string>
    <string name="first_judge_label">1st Judge</string>
    <string name="second_judge_label">2nd Judge</string>
    <string name="third_judge_label">3rd Judge</string>
    <string name="results_decision">Results</string>
    <string name="penalty_choose_judge">Judge: </string>
    <string name="penalty_choose_fighter">Gives penalty to fighter: </string>
    <string name="penalty_choose_weight">Whose score will be lessened by this much: </string>
    <!-- Error messages -->
    <string name="red_fighter_empty">The red fighter must have a name.</string>
    <string name="blue_fighter_empty">The blue fighter must have a name.</string>
    <string name="first_judge_empty">The first judge must have a name.</string>
    <string name="second_judge_empty">The second judge must have a name.</string>
    <string name="third_judge_empty">The third judge must have a name.</string>
    <string name="round_number">Round</string>
    <!-- Message -->
    <string name="wish_to_continue_question">Do you wish to continue?</string>

</resources>