<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gti350.labo1.PenaltyDefinitionActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/penalty_choose_judge"
        android:textColor="@color/text_white" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/button_first_judge"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toggle_button_on"
            android:checked="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/text_white"
            android:textOff="@string/first_judge_label"
            android:textOn="@string/first_judge_label" />

        <ToggleButton
            android:id="@+id/button_second_judge"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toggle_button_off"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/text_white"
            android:textOff="@string/second_judge_label"
            android:textOn="@string/second_judge_label" />

        <ToggleButton
            android:id="@+id/button_third_judge"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toggle_button_off"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/text_white"
            android:textOff="@string/third_judge_label"
            android:textOn="@string/third_judge_label" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/penalty_choose_fighter"
        android:textColor="@color/text_white" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/button_fighter_red"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toggle_button_on"
            android:checked="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/red_fighter"
            android:textOff="@string/red_fighter_short_label"
            android:textOn="@string/red_fighter_short_label" />

        <ToggleButton
            android:id="@+id/button_fighter_blue"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/toggle_button_off"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/blue_fighter"
            android:textOff="@string/blue_fighter_short_label"
            android:textOn="@string/blue_fighter_short_label" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/penalty_choose_weight"
        android:textColor="@color/text_white" />

    <NumberPicker
        android:id="@+id/number_picker_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textColor="@color/text_white" />
    </LinearLayout>

</LinearLayout>