<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gti350.labo1.ResultsActivity" >

    <TableLayout
        android:id="@+id/table_results"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_first_judge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/first_judge_label"
                android:textColor="@color/text_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/label_second_judge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/second_judge_label"
                android:textColor="@color/text_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/label_third_judge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/third_judge_label"
                android:textColor="@color/text_white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_first_judge_red_fighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/red_fighter_label"
                android:textColor="@color/text_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_first_judge_blue_fighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/blue_fighter_label"
                android:textColor="@color/text_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_second_judge_red_fighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/red_fighter_label"
                android:textColor="@color/text_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_second_judge_blue_fighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/blue_fighter_label"
                android:textColor="@color/text_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_third_judge_red_fighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/red_fighter_label"
                android:textColor="@color/text_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_third_judge_blue_fighter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/blue_fighter_label"
                android:textColor="@color/text_white"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>